--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
-  "main": "src/index.js",  // or "index.js" or "server.js"
+  "name": "tattoo-backend",
+  "version": "1.0.0",
+  "description": "Tattoo booking backend",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/index.js"  // Make sure this matches
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.7"
   }
 }
